# stapler

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
benches/: stapler_benches.rs
src/: cli.rs  document_types.rs  lib.rs  main.rs  merge.rs
src/merge/: loader.rs  mod.rs  tests.rs
tests/: merge_tests.rs
