[package]
name = "stapler"
version = "0.2.8"
edition = "2021"
authors = ["Marc Gilbrecht <marc-gilbrecht@outlook.de>"]
description = "Merge multiple (minimum 2) PDF files into one PDF file and nothing else"

[lib]
name = "stapler"
path = "src/lib.rs"

[[bin]]
name = "stapler"
path = "src/main.rs"

[dependencies]
lopdf = { version = "0.34.0" }
clap = { version = "4.5.23" }
anyhow = "1.0.95"

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "stapler_benches"
harness = false
required-features = ["test"]
