[package]
name = "stapler"
version = "1.0.0"
edition = "2021"
authors = ["Marc Gilbrecht <marc-gilbrecht@outlook.de>"]
description = "Merge multiple (minimum 2) PDF files into one PDF file and nothing else"

[lib]
name = "stapler"
path = "src/lib.rs"

[[bin]]
name = "stapler"
path = "src/main.rs"

[dependencies]
lopdf = { version = "0.38.0" }
clap = { version = "4.5.46" }
anyhow = "1.0.99"
glob = "0.3.3"

[dev-dependencies]
criterion = { version = "0.7.0" }

[[bench]]
name = "stapler_benches"
harness = false
required-features = ["test"]
