[package]
name = "stapler"
version = "1.2.0"
edition = "2021"
authors = ["Marc Gilbrecht <marc-gilbrecht@outlook.de>"]
description = "Merge multiple (minimum 2) PDF files into one PDF file and nothing else"

[lib]
name = "stapler"
path = "src/lib.rs"

[[bin]]
name = "stapler"
path = "src/main.rs"

[dependencies]
lopdf = { version = "0.39.0" }
anyhow = "1.0.101"
clap = { version = "4.5.58" }
glob = "0.3.3"

[dev-dependencies]
criterion = { version = "0.8.2" }

[[bench]]
name = "stapler_benches"
harness = false
required-features = ["test"]
